# langchain-office-tools

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  check_tools.py  cherrystudio_config.json  dev-requirements.txt  get_tools_list.py  get_tools_list_fixed.py  http_server.py  main.py  mcp_config.json  mcp_server_config.json  pyproject.toml  pytest.ini  request.json  requirements.txt  simple_server.py  test_api.py  test_api_with_correct_header.py  test_api_with_known_session.py  test_api_with_params.py  test_api_with_session.py  test_init_fixed.py  test_server.py  test_simple_tool.py  test_streamable_client.py  test_task_simple.py  test_task_tools.py  test_tools.py  test_with_init.py
config/: config.yaml  config.yaml.example
config/prompt_templates/: code_generation_template.txt  document_summary_template.txt  excel_assistant_template.txt  file_management_assistant_template.txt  general_template.txt  markdown_assistant_template.txt  office_tools_assistant_template.txt  ppt_assistant_template.txt  translation_assistant_template.txt  word_assistant_template.txt
docs/: deepseek_setup.md  moonshot_setup.md  openai_setup.md  qwen_setup.md  zhipu_setup.md
examples/: client_example.py  deepseek_example.py  default_model_example.py  llm_example_notebook.ipynb  llm_usage_example.py  modelscope_example.py  moonshot_example.py  ollama_example.py  prompt_template_example.py  prompt_template_notebook.ipynb  siliconflow_example.py  simple_example.py  zhipu_example.py
py313/: python313._pth
test_data/: my_task_list.json
tests/: test_llm_manager.py
(+16 files in other folders)
